plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
}


group = 'com.javacourse'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'


repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'junit:junit:4.13.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.0-rc3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc3'
    implementation 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
    implementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.7.3'
    implementation group: 'mysql', name: 'mysql-connector-java'
    runtimeOnly 'com.fasterxml.jackson.module:jackson-modules-java8:2.14.0-rc3'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
    implementation 'org.hibernate:hibernate-java8:5.6.14.Final'


}

tasks.named('test') {
    useJUnitPlatform()
}
